--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
 		    </section>
 	    <footer>
 		    This displays the total of all of your rolls. See how long it takes to get an overflow error...
+		    </br>
+			Check out another cool program: https://annaorgel.github.io/Chemotaxis/
 	    </footer>
 	</body>
 </html>
